log
Thu 28 Sep 2023 07:04:09 PM UTC: 
 tests:  0|4
total_score: 0/70
a4bfccb
Thu 28 Sep 2023 07:29:48 PM UTC: 
 heap.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  0|4
total_score: 0/70
10be2eb
Thu 28 Sep 2023 09:08:42 PM UTC: 
 heap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:34:48: error: expected ‘)’ before ‘:’ token
   34 |   Heap * monticulo = (Heap*)malloc(sizeof(Heap):
      |                                   ~            ^
      |                                                )
heap.c:49:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   49 | }
      | ^
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
In file included from test.c:4:
heap.c:34:10: error: unused variable ‘monticulo’ [-Werror=unused-variable]
   34 |   Heap * monticulo = (Heap*)malloc(sizeof(Heap):
      |          ^~~~~~~~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e2d8f5
Thu 28 Sep 2023 09:10:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:34:48: error: expected ‘)’ before ‘;’ token
   34 |   Heap * monticulo = (Heap*)malloc(sizeof(Heap);
      |                                   ~            ^
      |                                                )
heap.c:49:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   49 | }
      | ^
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
In file included from test.c:4:
heap.c:34:10: error: unused variable ‘monticulo’ [-Werror=unused-variable]
   34 |   Heap * monticulo = (Heap*)malloc(sizeof(Heap);
      |          ^~~~~~~~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bff5357
Thu 28 Sep 2023 09:11:06 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:34:48: error: expected ‘)’ before ‘;’ token
   34 |   Heap * monticulo = (Heap*)malloc(sizeof(Heap);
      |                                   ~            ^
      |                                                )
heap.c:49:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   49 | }
      | ^
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
In file included from test.c:4:
heap.c:34:10: error: unused variable ‘monticulo’ [-Werror=unused-variable]
   34 |   Heap * monticulo = (Heap*)malloc(sizeof(Heap);
      |          ^~~~~~~~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d014122
Thu 28 Sep 2023 09:12:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:16: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   39 |   monticulo -> capacity = 20;
      |                ^~~~~~~~
      |                capac
heap.c:41:69: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   41 |   monticulo -> heapArray = (int*) malloc(sizeof(int) * monticulo -> capacity);
      |                                                                     ^~~~~~~~
      |                                                                     capac
Compilation failed
7c0face
Thu 28 Sep 2023 09:12:13 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:16: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   39 |   monticulo -> capacity = 3;
      |                ^~~~~~~~
      |                capac
heap.c:41:69: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   41 |   monticulo -> heapArray = (int*) malloc(sizeof(int) * monticulo -> capacity);
      |                                                                     ^~~~~~~~
      |                                                                     capac
Compilation failed
b0d0e21
Thu 28 Sep 2023 09:12:46 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:26: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   41 |   monticulo -> heapArray = (int*) malloc(sizeof(int) * monticulo -> capac);
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
69b13f2
Thu 28 Sep 2023 09:13:17 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:26: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   41 |   monticulo -> heapArray = (int*) malloc(sizeof(int) * monticulo -> capacity);
      |                          ^
test.c: In function ‘initialize_heap’:
test.c:68:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capac’; did you mean ‘capacity’?
   68 |     heap->capac = 7;
      |           ^~~~~
      |           capacity
test.c: In function ‘test_create’:
test.c:95:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capac’; did you mean ‘capacity’?
   95 |     if(h->capac!=3){
      |           ^~~~~
      |           capacity
test.c:107:25: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capac’; did you mean ‘capacity’?
  107 |     if(h->size!=0 || h->capac!=3){
      |                         ^~~~~
      |                         capacity
test.c: In function ‘test_push’:
test.c:200:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capac’; did you mean ‘capacity’?
  200 |     if(h->capac != 15){
      |           ^~~~~
      |           capacity
cc1: all warnings being treated as errors
Compilation failed
b9f1094
Thu 28 Sep 2023 09:13:41 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:26: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   41 |   monticulo -> heapArray = (int*) malloc(sizeof(int) * monticulo -> capac);
      |                          ^
cc1: all warnings being treated as errors
Compilation failed
fee3b1e
Tue 10 Oct 2023 09:13:24 PM UTC: 
 heap.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  1|3
total_score: 10/70
0411818
